unpackaged/main/default/objects/NF_Teams_Performance_Total__c/NF_Teams_Performance_Total__c.object-meta.xml
<CustomObject>
    <label>Teams Performance-Total</label>
    <nameField>
        <displayFormat>TPT-{00000}</displayFormat>
        <label>Teams Performance-Total</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Performance-Total</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>