unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/AcwTime__c.field-meta.xml
<CustomField>
    <fullName>AcwTime__c</fullName>
    <label>AcwTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>