unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/AgentOffered__c.field-meta.xml
<CustomField>
    <fullName>AgentOffered__c</fullName>
    <label>AgentOffered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>