unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/AvgAvailableTime__c.field-meta.xml
<CustomField>
    <fullName>AvgAvailableTime__c</fullName>
    <label>AvgAvailableTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>