unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/AvgUnavailableTime__c.field-meta.xml
<CustomField>
    <fullName>AvgUnavailableTime__c</fullName>
    <label>AvgUnavailableTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>