unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End of the time duration that was used in API Call</description>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>