unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/InboundHandled__c.field-meta.xml
<CustomField>
    <fullName>InboundHandled__c</fullName>
    <label>InboundHandled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>