unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/InboundTime__c.field-meta.xml
<CustomField>
    <fullName>InboundTime__c</fullName>
    <label>InboundTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>