unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/OutboundTime__c.field-meta.xml
<CustomField>
    <fullName>OutboundTime__c</fullName>
    <label>OutboundTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>