unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/PercentRefused__c.field-meta.xml
<CustomField>
    <fullName>PercentRefused__c</fullName>
    <label>PercentRefused</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>