unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/Refused__c.field-meta.xml
<CustomField>
    <fullName>Refused__c</fullName>
    <label>Refused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>