unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/TeamId__c.field-meta.xml
<CustomField>
    <fullName>TeamId__c</fullName>
    <label>TeamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>