unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/TotalAvgHandled__c.field-meta.xml
<CustomField>
    <fullName>TotalAvgHandled__c</fullName>
    <label>TotalAvgHandled</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>