unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/TotalAvgHandleTime__c.field-meta.xml
<CustomField>
    <fullName>TotalAvgHandleTime__c</fullName>
    <label>TotalAvgHandleTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>