unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/TotalTalkTime__c.field-meta.xml
<CustomField>
    <fullName>TotalTalkTime__c</fullName>
    <label>TotalTalkTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>