unpackaged/main/default/objects/NF_Teams_Performance_Total__c/fields/UnavailableTime__c.field-meta.xml
<CustomField>
    <fullName>UnavailableTime__c</fullName>
    <label>UnavailableTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>